3.3.4/_sources/gallery/subplots_axes_and_figures/custom_figure_class.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/custom_figure_class.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_custom_figure_class.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_custom_figure_class.py:


========================
Custom Figure subclasses
========================

You can pass a `.Figure` subclass to `.pyplot.figure` if you want to change
the default behavior of the figure.

This example defines a `.Figure` subclass ``WatermarkFigure`` that accepts an
additional parameter ``watermark`` to display a custom watermark text. The
figure is created using the ``FigureClass`` parameter of `.pyplot.figure`.
The additional ``watermark`` parameter is passed on to the subclass
constructor.

.. GENERATED FROM PYTHON SOURCE LINES 15-42

.. code-block:: default


    import matplotlib.pyplot as plt
    from matplotlib.figure import Figure
    import numpy as np


    class WatermarkFigure(Figure):
        """A figure with a text watermark."""

        def __init__(self, *args, watermark=None, **kwargs):
            super().__init__(*args, **kwargs)

            if watermark is not None:
                bbox = dict(boxstyle='square', lw=3, ec='gray',
                            fc=(0.9, 0.9, .9, .5), alpha=0.5)
                self.text(0.5, 0.5, watermark,
                          ha='center', va='center', rotation=30,
                          fontsize=40, color='gray', alpha=0.5, bbox=bbox)


    x = np.linspace(-3, 3, 201)
    y = np.tanh(x) + 0.1 * np.cos(5 * x)

    plt.figure(FigureClass=WatermarkFigure, watermark='draft')
    plt.plot(x, y)





.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_custom_figure_class_001.png
    :alt: custom figure class
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    [<matplotlib.lines.Line2D object at 0x7fcbe30debb0>]



.. GENERATED FROM PYTHON SOURCE LINES 43-50

------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:

.. GENERATED FROM PYTHON SOURCE LINES 51-56

.. code-block:: default


    import matplotlib
    matplotlib.pyplot.figure
    matplotlib.figure.Figure
    matplotlib.figure.Figure.text




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function Figure.text at 0x7fcc16358160>




.. _sphx_glr_download_gallery_subplots_axes_and_figures_custom_figure_class.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: custom_figure_class.py <custom_figure_class.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: custom_figure_class.ipynb <custom_figure_class.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
